--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ python = "^3.12"
 discord = "^2.3.2"
 python-dotenv = "^1.0.1"
 google-generativeai = "^0.5.4"
+pillow = "^10.3.0"
 
 
 [build-system]
